Drop support for Gradle < 8 (#903)