@@ -11,8 +11,6 @@ import com.sourcegraph.scip_java.BuildInfo
 import org.gradle.api.DefaultTask
 import org.gradle.api.Plugin
 import org.gradle.api.Project
-import org.gradle.api.artifacts.Configuration
-import org.gradle.api.provider.Property
 import org.gradle.api.publish.PublishingExtension
 import org.gradle.api.publish.maven.MavenPublication
 import org.gradle.api.tasks.SourceSetContainer
@@ -23,7 +21,6 @@ class SemanticdbGradlePlugin extends Plugin[Project] {
   import Logging._
 
   override def apply(project: Project): Unit = {
-    val gradle = new GradleVersion(project.getGradle().getGradleVersion())
     project.afterEvaluate { project =>
       project.getRepositories().add(project.getRepositories().mavenCentral())
       project.getRepositories().add(project.getRepositories().mavenLocal())
@@ -106,60 +103,16 @@ class SemanticdbGradlePlugin extends Plugin[Project] {
           .getTasks()
           .withType(classOf[JavaCompile])
           .configureEach { task =>
-            // If we run on JDK 17, we need to add special flags to the JVM
-            // to allow access to the compiler.
-
-            // JDK 17 support was only introduced in 7.3 so
-            // we don't need to do it for earlier versions
-            // https://docs.gradle.org/current/userguide/compatibility.html
-            if (!gradle.is3 && !gradle.is2 && !gradle.is5 && !gradle.is6) {
-              type JavaCompiler = {
-                type Metadata = {
-                  type LangVersion = {
-                    def asInt(): Int
-                  }
-                  def getLanguageVersion(): LangVersion
-                }
-                def getMetadata(): Metadata
-              }
-
-              type HasCompilerProperty = {
-                def getJavaCompiler(): Property[JavaCompiler]
-              }
-
-              val toolchainCompiler = Option(
-                task
-                  .asInstanceOf[HasCompilerProperty]
-                  .getJavaCompiler()
-                  .getOrNull()
-              ).map(_.getMetadata().getLanguageVersion().asInt())
-
-              val host = System
-                .getProperty("java.version")
-                .split("\\.")
-                .headOption
-                .map(_.toInt)
-
-              toolchainCompiler
-                .orElse(host)
-                .foreach { version =>
-                  if (version >= 17) {
-                    val newValue = task.getOptions().getForkOptions()
-                    val jvmArgs =
-                      BuildInfo
-                        .javacModuleOptions
-                        .map(_.stripPrefix("-J"))
-                        .asJava
-
-                    newValue.getJvmArgs() match {
-                      case null =>
-                        newValue.setJvmArgs(jvmArgs)
-                      case other =>
-                        newValue.getJvmArgs().addAll(jvmArgs)
-
-                    }
-                  }
-                }
+            // Add --add-exports JVM args so our compiler plugin can access
+            // javac internals. Required on JDK 17+ (JEP 403), no-op on 11-16.
+            val forkOptions = task.getOptions().getForkOptions()
+            val jvmArgs =
+              BuildInfo.javacModuleOptions.map(_.stripPrefix("-J")).asJava
+            forkOptions.getJvmArgs() match {
+              case null =>
+                forkOptions.setJvmArgs(jvmArgs)
+              case _ =>
+                forkOptions.getJvmArgs().addAll(jvmArgs)
             }
 
             task.getOptions().setFork(true)
@@ -280,28 +233,6 @@ class SemanticdbGradlePlugin extends Plugin[Project] {
 
 }
 
-class GradleVersion(ver: String) {
-  override def toString(): String = s"[GradleVersion: $ver]"
-  def is7 = ver.startsWith("7.")
-  def is8 = ver.startsWith("8.")
-  def is6 = ver.startsWith("6.")
-  // 6.7 introduced toolchains support https://blog.gradle.org/java-toolchains
-  // And javaCompiler property
-  def is6_7_plus = {
-    ver match {
-      case s"6.$x.$y" if x.toInt >= 7 =>
-        true
-      case s"6.$x" if x.toInt >= 7 =>
-        true
-      case _ =>
-        false
-    }
-  }
-  def is5 = ver.startsWith("5.")
-  def is3 = ver.startsWith("3.")
-  def is2 = ver.startsWith("2.")
-}
-
 class WriteDependencies extends DefaultTask {
   import Logging._
 
@@ -328,8 +259,6 @@ class WriteDependencies extends DefaultTask {
       } else
         path
     }
-
-    val gradle = new GradleVersion(project.getGradle().getGradleVersion())
 
     // List the project itself as a dependency so that we can assign project name/version to symbols that are defined in this project.
     // The code below is roughly equivalent to the following with Groovy:
@@ -411,16 +340,10 @@ class WriteDependencies extends DefaultTask {
         }
     }
 
-    def canBeResolved(conf: Configuration) =
-      if (gradle.is2)
-        !conf.isEmpty()
-      else
-        conf.isCanBeResolved()
-
     project
       .getConfigurations()
       .forEach { conf =>
-        if (canBeResolved(conf)) {
+        if (conf.isCanBeResolved()) {
           try {
             val resolved = conf.getResolvedConfiguration()
             resolved
